# paralela2025

./: .gitignore  CMakeLists.txt  README.md  paralelo  performance_metrics_linear_search.txt  performance_metrics_unordered_map.txt
docs/: spec.md  tests_plan.md
documentos/: contexto.txt
src/: csv_parser.cpp  csv_parser.hpp  main.cpp  model.hpp  processor.cpp  processor.hpp
tests/fortran_test/: main.f90  performance_metrics_fortran.txt
tests/integration/: test_integration.cpp
tests/performance/: performance_test.cpp  test_chunk_size.cpp
tests/unit/: test_csv_parser.cpp  test_processor.cpp
